2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Pass on jikes program name to 
	GNU Classpath's configure script.

	Reported by:  Kiyo Inaba  <inaba@src.ricoh.co.jp>

2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Check for SIZE_MAX. Fixes a build issue on Irix.

	Reported by:  Riccardo Mottola  <riccardo@kaffe.org>

2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in:
	(install-hook) Renamed to 
	(install-data-local), so that it gets picked up by automake.
	Added a dependency on installdirs to make sure its ran after the 
	directories are created.
	(uninstall-local) Added.

        Reported by:  Alejandro Mery  <amery@geeks.cl>

2005-12-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/java_lang_VMProcess.c
	(Java_java_lang_VMProcess_nativeSpawn): Spawn in the correct
	dir, if one is given.

        Reported by:  Alejandro Mery  <amery@geeks.cl>

2005-12-10  Guilhem Lavaux  <guilhem@kaffe.org>

	* test/regression/TestSerialFields.java,
	test/regression/TestSerialPersistent.java,
	test/regression/TestSerialVersions.java: Fixed class ordering
	problem. Changed output accordingly. We expect an
	InvalidClassException in Duplicates & Overlap now.

	* libraries/javalib/external/classpath/java/io/ObjectOutputStream.java,
	libraries/javalib/external/classpath/java/io/ObjectStreamClass.java:
	Temporary patch before synchronizing with classpath.

2005-12-10  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* FAQ/FAQ.classlibrary-compile: Updated the description of ecj.

2005-12-08  Guilhem Lavaux  <guilhem@kaffe.org>

	* developers/update-vm-list: Sort files before adding them to
	Makefile.am

	* configure.ac: Fixed a small problem when a precise ecj is
	specified in --with-ecj.
	
	* configure,
	libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	libraries/javalib/external/classpath/Makefile.in,
	libraries/javalib/external/classpath/aclocal.m4,